--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,43 @@
             name="description"
             content="Web site created using create-react-app"
     />
+    <meta name="description" content="Pracownia usług psychologicznych Mirosław Jarosiński Tarnobrzeg"/>
+    <meta name="keywords" content="psycholog,
+    badania,
+    Tarnobrzeg,
+    tarnobrzeg,
+    badania psychologiczne,
+    badania,
+    psychologiczne,
+    psychotesty,
+    psychologia,
+    prawo jazdy,
+    prawo,
+    jazdy,
+    alkohol,
+    broń,
+    pozwolenie na broń, 
+    pozwolenie,
+    pistolet,
+    zgoda,
+    samochód, 
+    pojazd,
+    badania na kierowców, 
+    kierowca,
+    kierowców,
+    badania na egzaminatorów, 
+    badania psychologiczne kierowców, 
+    badania psychologiczne po alkoholu,
+    psycholog tarnobrzeg,
+    badania psychologiczne tarnobrzeg,
+    psychotesty tarnobrzeg,
+    ciemnia,
+    ciemnia tarnobrzeg,
+    badania na kierowców tarnobrzeg,
+    "/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <title>Pracownia uslug psychologicznych</title>
+    <title>Pracownia uslug psychologicznych Mirosław Jarosiński</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
