--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,10 @@
     ciemnia,
     ciemnia tarnobrzeg,
     badania na kierowców tarnobrzeg,
+    Mirosław,
+    mirosław,
+    jarosiński,
+    Jarosiński
     "/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
